[project]
name = "pizzeria-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "SwairIT",email = "1q2w3e4r5t6y7u89o0pi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[tool.poetry]
packages = [{include = "pizzeria_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
